Added code and poster for IJCAI18, updated CV

--- a/index.html
+++ b/index.html
@@ -390,10 +390,18 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://github.com/lingchunkai/payoff_learning" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
 
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://lingchunkai.github.io/pdf/diff-game-learning-IJCAI-18.pdf" target="_blank" rel="noopener">
+  Poster
+</a>
 
 
 
