--- a/publication/diff-learning-extensive/index.html
+++ b/publication/diff-learning-extensive/index.html
@@ -352,10 +352,18 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://github.com/lingchunkai/payoff_learning" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
 
+
+
+<a class="btn btn-primary btn-outline" href="https://lingchunkai.github.io/pdf/diff-game-learning-IJCAI-18.pdf" target="_blank" rel="noopener">
+  Poster
+</a>
 
 
 
