--- a/404.html
+++ b/404.html
@@ -248,6 +248,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="https://lingchunkai.github.io/publication/diff-learning-large-scale/">Large Scale Learning of Agent Rationality in Two-Player Zero-Sum Games</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://lingchunkai.github.io/publication/diff-learning-extensive/">What game are we playing? End-to-end learning in normal and extensive form games</a></li>
   </ul>
   
