Updated year of study

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 <h1 id="about">About</h1>
 
-<p>I am a 1st year PhD student in the Department of Computer Science, CMU. I am interested in Artificial Intelligence and Machine Learning. I am co-advised by <a href="http://zicokolter.com" target="_blank">Zico Kolter</a> and <a href="https://feifang.info" target="_blank">Fei Fang</a>.</p>
+<p>I am a 2nd year PhD student in the Department of Computer Science, CMU. I am interested in Artificial Intelligence and Machine Learning. I am co-advised by <a href="http://zicokolter.com" target="_blank">Zico Kolter</a> and <a href="https://feifang.info" target="_blank">Fei Fang</a>.</p>
 
 
     <div class="row">
