--- a/index.html
+++ b/index.html
@@ -590,6 +590,8 @@
 <li>15-857 F17: Analytical Performance Modeling &amp; Design of Computer Systems</li>
 <li>10-709 F17: Fundamentals of Learning from the Crowd <a href="pdf/crowdsourcing-project.pdf" target="_blank">Term project</a></li>
 <li>15-780 S18: Graduate Artificial Intelligence <a href="pdf/grad-ai-project.pdf" target="_blank">Term assignment</a></li>
+<li>15-824 F18 (Present): Logical Foundations of Cyber-Physical Systems</li>
+<li>15-850 F18 (Present): Advanced Algorithms</li>
 </ul>
 
   </div>
