Added poster and paper to AAAI 2019 paper

--- a/index.html
+++ b/index.html
@@ -384,6 +384,9 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1903.04101" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -393,6 +396,11 @@
 
 
 
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://lingchunkai.github.io/pdf/diff-learning-large-scale.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
