--- a/publication/diff-learning-large-scale/index.html
+++ b/publication/diff-learning-large-scale/index.html
@@ -344,6 +344,9 @@
 
 
 
+<a class="btn btn-primary btn-outline" href="https://arxiv.org/abs/1903.04101" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -353,6 +356,11 @@
 
 
 
+
+
+<a class="btn btn-primary btn-outline" href="https://lingchunkai.github.io/pdf/diff-learning-large-scale.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
