--- a/publication/index.html
+++ b/publication/index.html
@@ -281,6 +281,9 @@
 
 
 
+<a class="btn btn-primary btn-outline btn-xs" href="https://arxiv.org/abs/1903.04101" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -290,6 +293,11 @@
 
 
 
+
+
+<a class="btn btn-primary btn-outline btn-xs" href="https://lingchunkai.github.io/pdf/diff-learning-large-scale.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
