--- a/publication/index.html
+++ b/publication/index.html
@@ -771,7 +771,7 @@
   </span>
   (2022).
   <a href="/publication/safe-search-efce/">Safe Search for Stackelberg Equilibria in Extensive-Form Games</a>.
-  To appear in <em>AAAI 2022 main track</em>..
+  Accepted to <em>AAAI 2022 main track</em>.
   
   <p>
 
