--- a/publication/index.html
+++ b/publication/index.html
@@ -866,6 +866,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lingchunkai/SafeSearchSSE" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
