--- a/index.html
+++ b/index.html
@@ -1220,6 +1220,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lingchunkai/SafeSearchSSE" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
