--- a/publication/safe-search-sse/index.html
+++ b/publication/safe-search-sse/index.html
@@ -778,6 +778,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://github.com/lingchunkai/SafeSearchSSE" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
