--- a/publication/index.html
+++ b/publication/index.html
@@ -1232,6 +1232,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lingchunkai/large-scale-learning-aaai19" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
