--- a/index.html
+++ b/index.html
@@ -866,7 +866,8 @@
     <h1>Biography</h1>
 
     <div class="article-style">
-      <p>I am a 5th year PhD student in the Department of Computer Science, CMU. I am co-advised by <a href="http://zicokolter.com" target="_blank" rel="noopener">Zico Kolter</a> and <a href="https://feifang.info" target="_blank" rel="noopener">Fei Fang</a>. I am broadly interested in artificial intelligence. My current projects involve designing machine learning techniques to learn and solve games.</p>
+      <p>I am a final year PhD student in the Department of Computer Science, CMU. I am co-advised by <a href="http://zicokolter.com" target="_blank" rel="noopener">Zico Kolter</a> and <a href="https://feifang.info" target="_blank" rel="noopener">Fei Fang</a>. I am broadly interested in artificial intelligence. My current projects involve designing machine learning techniques to learn and solve games.</p>
+<p>I am currently on the job market. Feel free to contact me at chunkail[at]cs.cmu.edu about any opportunities!</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/uploads/resume.pdf" target="_blank">resumé</a>.</p>
 
