update efce paper title

--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
       Fei Fang</span>
   </span>
   (2022).
-  <a href="/publication/safe-search-efce/">Safe Search for Stackelberg Equilibria in Extensive-Form Games</a>.
+  <a href="/publication/safe-search-efce/">Safe Subgame Resolving for Extensive Form Correlated Equilibrium</a>.
   Accepted to <em>AAAI 2022 main track</em>.
   
   <p>
