--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -677,7 +677,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/publication/safe-search-efce/" >Safe Search for Stackelberg Equilibria in Extensive-Form Games</a>
+      <a href="/publication/safe-search-efce/" >Safe Subgame Resolving for Extensive Form Correlated Equilibrium</a>
     </div>
 
     
