--- a/index.html
+++ b/index.html
@@ -1060,6 +1060,61 @@
 
   <span >
       Chun Kai Ling</span>, <span >
+      J. Zico Kolter, Fei Fang</span>
+  </span>
+  (2022).
+  <a href="/publication/epf-learning/">Function Approximation for Solving Stackelberg Equilibrium in Large Perfect Information Games</a>.
+  Accepted to <em>AAAI 2023 main track</em>.
+  
+  <p>
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</p>
+
+  
+  
+</div>
+
+  
+    
+
+
+<div class="pub-list-item view-citation" style="margin-bottom: 1rem">
+  <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+
+  
+  
+
+  <span class="article-metadata li-cite-author">
+    
+
+  <span >
+      Chun Kai Ling</span>, <span >
       Fei Fang</span>
   </span>
   (2022).
