--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/learn-epf-sefce-preprint.pdf" target="_blank" rel="noopener">
+  Preprint
+</a>
+
 
 
 
@@ -1081,6 +1089,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lingchunkai/learn-epf-sefce" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
