--- a/publication/index.html
+++ b/publication/index.html
@@ -782,6 +782,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/learn-epf-sefce-preprint.pdf" target="_blank" rel="noopener">
+  Preprint
+</a>
+
 
 
 
@@ -791,6 +799,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://github.com/lingchunkai/learn-epf-sefce" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
