--- a/index.html
+++ b/index.html
@@ -1168,6 +1168,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/pdf/SafeSearchEFCEPoster.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
 
@@ -1306,6 +1314,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/pdf/SafeSearchSSEPoster.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
