--- a/publication/index.html
+++ b/publication/index.html
@@ -886,6 +886,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/pdf/SafeSearchEFCEPoster.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
 
@@ -962,6 +970,14 @@
 
 
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/pdf/SafeSearchSSEPoster.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
 
 
 
