--- a/publication/safe-search-efce/index.html
+++ b/publication/safe-search-efce/index.html
@@ -787,6 +787,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="/pdf/SafeSearchEFCEPoster.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
 
