--- a/publication/safe-search-sse/index.html
+++ b/publication/safe-search-sse/index.html
@@ -793,6 +793,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="/pdf/SafeSearchSSEPoster.pdf" target="_blank" rel="noopener">
+  Slides
+</a>
+
 
 
 
