fixed .. and oral

--- a/publication/index.html
+++ b/publication/index.html
@@ -774,7 +774,7 @@
   </span>
   (2022).
   <a href="/publication/epf-learning/">Function Approximation for Solving Stackelberg Equilibrium in Large Perfect Information Games</a>.
-  Accepted to <em>AAAI 2023 main track</em>.
+  Accepted to <em>AAAI 2023 main track</em> (oral).
   
   <p>
 
@@ -853,7 +853,7 @@
   </span>
   (2022).
   <a href="/publication/safe-search-efce/">Safe Subgame Resolving for Extensive Form Correlated Equilibrium</a>.
-  Accepted to <em>AAAI 2022 main track</em>.
+  In  <em>AAAI 2022 main track</em> (oral).
   
   <p>
 
@@ -932,7 +932,7 @@
   </span>
   (2020).
   <a href="/publication/safe-search-sse/">Safe Search for Stackelberg Equilibria in Extensive-Form Games</a>.
-  Accepted to <em>AAAI 2021 main track</em>..
+  Accepted to <em>AAAI 2021 main track</em>.
   
   <p>
 
@@ -1018,7 +1018,7 @@
   </span>
   (2020).
   <a href="/publication/ac-net/">Deep Archimedean Copulas</a>.
-  Accepted to <em>Neurips 2020 main track</em>..
+  Accepted to <em>Neurips 2020 main track</em>.
   
   <p>
 
@@ -1096,7 +1096,7 @@
   </span>
   (2020).
   <a href="/publication/gpp-macro-actions/">Nonmyopic Gaussian Process Optimization with Macro-Actions</a>.
-  In <em>AISTATS</em>..
+  In <em>AISTATS</em>.
   
   <p>
 
@@ -1306,7 +1306,7 @@
   </span>
   (2019).
   <a href="/publication/diff-learning-large-scale/">Large Scale Learning of Agent Rationality in Two-Player Zero-Sum Games</a>.
-  In <em>AAAI 2019 main track</em>..
+  In <em>AAAI 2019 main track</em>.
   
   <p>
 
