--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@ I completed my PhD at Carnegie Mellon University under the supervision of <a hre
   </span>
   (2023).
   <a href="/publication/multileader-security/">Multi-defender Security Games with Schedules</a>.
-  Accepted to <em>GameSec 2023</em>.
+  Accepted to <em>GameSec 2023</em>. Best Paper Award.
   
   <p>
 
@@ -1145,20 +1145,18 @@ I completed my PhD at Carnegie Mellon University under the supervision of <a hre
 
 
 
-  
+
+
+
   
     
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="/uploads/pdf/GameSec_2023_multidefender-CamReady.pdf" target="_blank" rel="noopener">
-  Preprint
+
+
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2311.16392" target="_blank" rel="noopener">
+  PDF
 </a>
-
-
-
-
-  
-
-
 
 
 
