--- a/publication/multileader-security/index.html
+++ b/publication/multileader-security/index.html
@@ -761,20 +761,18 @@
 
 
 
-  
+
+
+
   
     
   
-<a class="btn btn-outline-primary btn-page-header" href="/uploads/pdf/GameSec_2023_multidefender-CamReady.pdf" target="_blank" rel="noopener">
-  Preprint
+
+
+
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/abs/2311.16392" target="_blank" rel="noopener">
+  PDF
 </a>
-
-
-
-
-  
-
-
 
 
 
