--- a/publication/coalition-structure-learning/index.html
+++ b/publication/coalition-structure-learning/index.html
@@ -755,6 +755,47 @@
 
 
 
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/abs/2312.09058" target="_blank" rel="noopener">
+  Preprint
+</a>
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 
   
 </div>
