Added ICLR24 paper

--- a/publication/multimodal-rus1/index.html
+++ b/publication/multimodal-rus1/index.html
@@ -843,7 +843,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">Quantifying &amp; Modeling Multimodal Interactions: An Information Decomposition Framework, has been accepted at NeurIPS 2023 as a poster</div>
+          <div class="col-12 col-md-9">Quantifying &amp; Modeling Multimodal Interactions: An Information Decomposition Framework</div>
         </div>
       </div>
       <div class="col-md-1"></div>
