--- a/publication/index.html
+++ b/publication/index.html
@@ -813,6 +813,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/uploads/pdf/layered-graph-security-games.pdf" target="_blank" rel="noopener">
+  Preprint
+</a>
+
 
 
 
