--- a/publication/layered-graph-security-games/index.html
+++ b/publication/layered-graph-security-games/index.html
@@ -756,6 +756,47 @@
 
 
 
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header" href="/uploads/pdf/layered-graph-security-games.pdf" target="_blank" rel="noopener">
+  Preprint
+</a>
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 
   
 </div>
