--- a/publication/layered-graph-security-games/index.html
+++ b/publication/layered-graph-security-games/index.html
@@ -768,7 +768,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header" href="/uploads/pdf/layered-graph-security-games.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/abs/2405.03070" target="_blank" rel="noopener">
   Preprint
 </a>
 
