--- a/index.html
+++ b/index.html
@@ -1075,6 +1075,14 @@ I completed my PhD at Carnegie Mellon University under the supervision of <a hre
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2405.09784" target="_blank" rel="noopener">
+  Preprint
+</a>
+
 
 
 
@@ -1136,7 +1144,7 @@ I completed my PhD at Carnegie Mellon University under the supervision of <a hre
   
     
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="/uploads/pdf/layered-graph-security-games.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2405.03070" target="_blank" rel="noopener">
   Preprint
 </a>
 
