--- a/publication/index.html
+++ b/publication/index.html
@@ -816,6 +816,14 @@
 
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2405.09784" target="_blank" rel="noopener">
+  Preprint
+</a>
+
 
 
 
@@ -885,7 +893,7 @@
   
     
   
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="/uploads/pdf/layered-graph-security-games.pdf" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2405.03070" target="_blank" rel="noopener">
   Preprint
 </a>
 
