updated preprints to pdf

--- a/publication/coalition-structure-learning/index.html
+++ b/publication/coalition-structure-learning/index.html
@@ -763,20 +763,18 @@
 
 
 
-  
+
+
+
   
     
   
+
+
+
 <a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/abs/2312.09058" target="_blank" rel="noopener">
-  Preprint
+  PDF
 </a>
-
-
-
-
-  
-
-
 
 
 
