--- a/publication/multimodal-rus1/index.html
+++ b/publication/multimodal-rus1/index.html
@@ -772,20 +772,18 @@
 
 
 
-  
+
+
+
   
     
   
+
+
+
 <a class="btn btn-outline-primary btn-page-header" href="https://arxiv.org/abs/2302.12247" target="_blank" rel="noopener">
-  Preprint
+  PDF
 </a>
-
-
-
-
-  
-
-
 
 
 
