--- a/project/index.html
+++ b/project/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="Postdoctoral Research Scientist" />
+  <meta name="description" content="Assistant Professor, Computer Science" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://lingchunkai.github.io/project/" />
@@ -303,7 +303,7 @@
   <meta property="og:site_name" content="Academic" />
   <meta property="og:url" content="https://lingchunkai.github.io/project/" />
   <meta property="og:title" content="Projects | Academic" />
-  <meta property="og:description" content="Postdoctoral Research Scientist" /><meta property="og:image" content="https://lingchunkai.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Assistant Professor, Computer Science" /><meta property="og:image" content="https://lingchunkai.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://lingchunkai.github.io/media/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
