updated contested logistics with best paper

--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@ If you are a prospective student interested in working in multiagent systems, fe
   </span>
   (2024).
   <a href="/publication/contested-logistics/">Contested Logistics: A Game Theoretic Approach</a>.
-  Accepted to <em>GameSec 2024</em>.
+  In <em>GameSec 2024</em>. Best Paper Award (out of 3).
   
   <p>
 
@@ -1084,8 +1084,14 @@ If you are a prospective student interested in working in multiagent systems, fe
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2408.13057" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
