--- a/publication/index.html
+++ b/publication/index.html
@@ -814,7 +814,7 @@
   </span>
   (2024).
   <a href="/publication/contested-logistics/">Contested Logistics: A Game Theoretic Approach</a>.
-  Accepted to <em>GameSec 2024</em>.
+  In <em>GameSec 2024</em>. Best Paper Award (out of 3).
   
   <p>
 
@@ -826,8 +826,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2408.13057" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
