added sparse commitment paper

--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,14 @@ If you are a prospective student interested in working in multiagent systems, fe
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2412.14337" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
