--- a/publication/index.html
+++ b/publication/index.html
@@ -907,8 +907,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://arxiv.org/abs/2412.14337" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
